--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -44,8 +44,8 @@ jobs:
         if [ $(git status | grep -c "**/*.html") == "0" ]; then
           git checkout .
         else
-          git config --global user.name 'Your Name'
-          git config --global user.email 'YOUR-USERNAME@users.noreply.github.com'
+          git config --global user.name 'Docs Bot'
+          git config --global user.email 'DOCS-BOT@users.noreply.github.com'
           git add -A
           git commit -m "Update documentation automatically"
           git push
