--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,11 @@
             <artifactId>zjsonpatch</artifactId>
             <version>0.4.11</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.bohnman</groupId>
+            <artifactId>squiggly-filter-jackson</artifactId>
+            <version>1.3.18</version>
+        </dependency>
     </dependencies>
 
 
