--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,19 @@
             <artifactId>zjsonpatch</artifactId>
             <version>0.4.11</version>
         </dependency>
+
         <dependency>
             <groupId>com.github.bohnman</groupId>
             <artifactId>squiggly-filter-jackson</artifactId>
             <version>1.3.18</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.11.1</version>
+        </dependency>
+
     </dependencies>
 
 
